# gaussia-papers

./: .gitignore  pyproject.toml
papers/Role_Adherence/: refs.bib  research_notes.md  role_adherence_en.tex
papers/prompt-leakage/: prompt_leakage_resistance.tex  references.bib
papers/prompt-leakage/experiments/: benchmark.json  false_positive_experiment.ipynb  generate_benchmark.py  requirements.txt  similarity_comparison_experiment.ipynb  similarity_methods.py  threshold_sweep_experiment.ipynb
papers/role-adherence/: README.md  logprob_judge_proposal.md  role-adherence-en.tex
papers/role-adherence/experiments/: README.md  benchmark.json  experiments.ipynb  logprob_experiment.ipynb  logprob_results.json
researches/prompt-leakage/: Deep Research.md  Deterministic-search.md  paper-sketch.md  proposal-discussion.md  proposal-draft.md
