[project]
name = "gaussia-papers"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "gaussia",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "rouge-score>=0.1.2",
    "sentence-transformers>=2.0.0",
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]

[tool.uv.sources]
gaussia = { path = "../pygaussia", editable = true }
